--- a/Dissertation.Rmd
+++ b/Dissertation.Rmd
@@ -394,7 +394,7 @@ Despite its advantages, e‑prop also has notable drawbacks. First, it requires 
 Spike-timing-dependent plasticity (STDP) represents a training approach for SNNs that draws even greater inspiration from the learning rules observed in biological neurons. STDP is a biological learning rule that adjusts the strength of synaptic connections based on the precise timing of pre-synaptic and post-synaptic spikes. If a pre-synaptic neuron fires just before a post-synaptic neuron, the connection between them is strengthened. Conversely, if the order is reversed, the connection is weakened. This temporally sensitive form of Hebbian learning, often summarized by the maxim "cells that fire together, wire together," operates locally at each synapse and does not require global error signals. This makes it inherently biologically plausible, asynchronous, and capable of unsupervised learning.
 
 
-![The change of synaptic weight plotted against the difference in timing of the pre- and post-synaptic neuron spikes, showing the long term potential and long term depression phenomena.](images/stdp_ltp_ltd.png){#fig:stdp_ltp_ltd fig-align=center}
+![The change of synaptic weight plotted against the difference in timing of the pre- and post-synaptic neuron spikes, showing the long term potential and long term depression phenomena.](images/stdp_ltp_ltd.png){#fig:stdp_ltp_ltd fig-align=center width="300px"}
 
 
 Reward-modulated STDP (R-STDP) extends the basic STDP rule by incorporating a global reward or punishment signal that modulates the synaptic weight changes. This allows the network to learn task-specific features by reinforcing connections that contribute to correct outputs and weakening those associated with errors. R-STDP bridges the gap between unsupervised STDP and supervised learning, enabling SNNs to tackle more complex, goal-oriented tasks like speech recognition. The reward signal in R-STDP can potentially be implemented using neuromodulators, further enhancing the biological plausibility of SNN training.
@@ -438,6 +438,9 @@ An adjoint system to the leaky integrate-and-fire (LIF) network has been derived
 
 ![Spikes propagated forward according to LIF neuron dynamics. Error signals are propagated backword according to the adjoint system. $\nu$ ](images/forward_backward_dynamics_evp.png){#fig:eventprop_free_dynamics fig-align=center}
 
+	\documentclass{article}
+
+\begin{document}
 
 
 
@@ -725,7 +728,9 @@ This defines how the adjoint variables, $\lambda_V$ and $\lambda_I$, dynamically
 
 ## Implementing the Novel Eventprop Scheme in Software
 
-The derived mathematics need to be actualised in code. To run efficiently, I implemented this maths in C++. 
+The derived mathematics needed to be actualised in code. I examined the Eventprop library to find where the loss function and the dynamics of the output neurons are defined. I used C++ to implement a new function defining the behaviour of the network for the Gaussian based loss. Using C++ enables greater performance over higher-level languages like Python [@zehraComparativeAnalysisPython2020]. 
+
+The section marked "Backward Pass" uses the 
 
 
 ![Code to implement the mathematics of the Eventprop scheme for a Gaussian based loss.](images/code_of_evp.png){#fig:code_of_evp fig-align=center width="600px"}
@@ -741,6 +746,10 @@ This loss was chosen as it deals with the problem highlighted by the Gedanken Ex
 
 # Results
 
+
+
+
+
 Show cool plots of spikes occurring in the network.
 
 How the resources are utilised. Memory / compute
@@ -755,23 +764,37 @@ Show plot of the exp function learning
 
 Show that it reaches SOTA accuracy. 
 
-## Comparing Existing Loss Functions
+This is cool, I reached the original project objective of training a SNN to recognise voice
 
-I then implemented other loss functions found in literature and got the following results. This shows that the exp loss function is best. 
 
-Show plots of how quickly the existing loss functions learn.
-
-Compare and explain.
 
 ## New Loss Function Improves Training
 
 Show that it achieves SOTA accuracy too!
 
-Show that it learns faster than the previous loss functions due to the increased resilience to noise.
+Testing the new loss it increases the learning rate 
+
+
+![Plot of the mean correct evaluation accuracy per epoch of the Gaussian based sum loss (red) and the exponential sum loss (blue), over 5 runs each.](images/training_performance_comparison_100.png){#fig:code_of_evp fig-align=center width="600px"}
+
+
+Compare the confusion.
+
+Compare test accuracy??
 
 # Discussion
 
+You can get really good accuracy training 
+
+Cool, shows importance of finding the correct loss function.
+
+Could there be another function which knows when to listen to the output spike?
+
+
+
 Eventprop Training for larger models.
+
+Significance of increased learning rate
 
 Learnable delays for Eventprop.
 
