--- a/Dissertation.Rmd
+++ b/Dissertation.Rmd
@@ -496,7 +496,7 @@ Having chosen the library I will use to implement Eventprop, I installed a Linux
 
 ## Training the Network
 
-First I implemented the model used in [@nowotnyLossShapingEnhances2025], using optimal hyperparameters. The model uses Leaky Integrate-and-Fire neuron model with exponential synapses. The model has a single hidden layer with 512 neurons. The hidden layer is recurrent, being fully connected into itself. I trained the model for 300 epochs, then testing the model version which achieved the greatest accuracy. I did this for the current state-of-the-art loss, $\mathcal{L}_{exp\_sum}$.
+First I implemented the model used in [@nowotnyLossShapingEnhances2025], using optimal hyperparameters. The model uses Leaky Integrate-and-Fire neuron model with exponential synapses. The model has a single hidden layer with 512 neurons. The hidden layer is recurrent, being fully connected into itself. The model is trained for 300 epochs, the best model out of 300 is saved. It is then tested against the completely new test data. I did this for the current state-of-the-art loss, $\mathcal{L}_{exp\_sum}$.
 
 ## Deriving an New and Improved Loss Function and Eventprop Scheme 
 
@@ -709,6 +709,15 @@ The time variable `local_t` is a fraction from 0 to 1 of how far into the record
 
 ![Code to implement the mathematics of the Eventprop scheme for a Gaussian based loss.](images/code_of_evp.png){#fig:code_of_evp fig-align=center width="600px"}
 
+To test this Eventprop scheme, a model is trained for 300 epochs, and the best version of the model is saved. Then the saved model is tested against completely new data. I also ran it 5 times for a reduced amount of epochs, 100, along with the old loss function. This is to compare the learning rate averaged out over 5 runs for statistical significance. 
+
+## Profiling the Power Usage of GPU vs CPU
+
+To compare the performance of a machine learning workflow on a GPU versus a CPU, I conducted a series of tests. The CPU (AMD Ryzen 9 5950X) run was executed  with a batch size of 1. For the GPU (Nvidia RTX 4090), training was performed using seven different batch sizes (1, 2, 4, 8, 16, 32, 64) to evaluate how performance scaled with increased parallelism. During each run, I recorded the power consumption and measured the duration of each epoch. By averaging the power usage and epoch times, I calculated the energy consumed per epoch as the product of average power and average epoch duration. This analysis aimed not only to compare speed, but also to determine whether the GPU offers greater energy efficiency.
+
+
+![A view of the training in progress on the left, and the GPU being profiled on the right.](images/terminal_view.png){#fig:terminal_view fig-align=center }
+
 
 
 
@@ -717,48 +726,35 @@ The time variable `local_t` is a fraction from 0 to 1 of how far into the record
 
 
 
-![Code to implement the mathematics of the Eventprop scheme for a Gaussian based loss.](images/result_of_exp_simple.png){#fig:result_of_exp_simple fig-align=center }
-
-
-
-
-
-
-![Code to implement the mathematics of the Eventprop scheme for a Gaussian based loss.](images/result_of_gaus_simple.png){#fig:result_of_gaus_simple fig-align=center }
-
-
-
-
-
-![Plot of the mean correct evaluation accuracy per epoch of the Gaussian based sum loss (red) and the exponential sum loss (blue), over 5 runs each.](images/training_performance_comparison_100.png){#fig:code_of_evp fig-align=center width="600px"}
-
-
-
-
 ## Reproducing State-Of-The-Art Accuracy
 
-Before experimenting with novel loss functions I used the current best loss function found in the literature for Eventprop, $\mathcal{L}_{sum\_exp}$. To replicate the state-of-the-art results I ensure that the hyper-parameters of the network and training scheme parameters were set up correctly. To do this the parameters in the literature had to be matched to the variables in the software. 
+Figrue shows the evaluation correct rate for training of the network running for 300 epochs. The maximum evaluation correct of 91.5% is reached during the 281st epoch. This value matches the value reported in literature [@nowotnyLossShapingEnhances2025]. Then I tested the model which achieved the best evaluation during training on the test data, it achieved 93.3%. This again matched the value reported in literature [@nowotnyLossShapingEnhances2025].  
 
-I used the development pipeline I had set up to run the training program, and got the correct evaluation value of 92% stated in literature. Putting me on the SHD benchmark leaderboard. 
 
-Show plot of the exp function learning
+![Evaluation correctness vs epoch number, exponential weighting loss function. Red arrow shows maximum value reached.](images/result_of_exp_simple.png){#fig:result_of_exp_simple fig-align=center }
 
-Show that it reaches SOTA accuracy. 
 
-This is cool, I reached the original project objective of training a SNN to recognise voice
 
 
 
 ## New Loss Function Improves Training
 
-Show that it achieves SOTA accuracy too!
+Figure shows the training of the new loss function, $\mathcal{L}_{sum\_gaus}$. It too reaches a maximum value of 91.5% during the 300 epochs of training. During the test it reached a slightly lower 92.9%. 
 
-Testing the new loss it increases the learning rate 
+
+![Evaluation correctness vs epoch number, Gaussian weighting loss function. Red arrow shows maximum value reached.](images/result_of_gaus_simple.png){#fig:result_of_gaus_simple fig-align=center }
+
+
+Figure shows the graph of mean evaluation correct for the first 100 epochs for the Gaussian based loss function end the exponential based loss function, ran 5 times each. It can be seen that the Gaussian learning rate is much faster in the beginning. 
 
 
 ![Plot of the mean correct evaluation accuracy per epoch of the Gaussian based sum loss (red) and the exponential sum loss (blue), over 5 runs each.](images/training_performance_comparison_100.png){#fig:code_of_evp fig-align=center width="600px"}
 
 
+
+## Power Usage of GPU and CPU
+
+The figure shows the time and energy consumption per epoch for each setup, plotted on a logarithmic scale. The CPU, running a single batch, was over 10 times slower than the GPU. Although the CPU consumed less power, the significantly longer runtime resulted in higher overall energy usage.
 
 
 ![Plot of the mean correct evaluation accuracy per epoch of the Gaussian based sum loss (red) and the exponential sum loss (blue), over 5 runs each.](images/time_and_energy_cost.png){#fig:time_and_energy_cost fig-align=center width="600px"}
