--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,15 @@
+@article{actonAppleDelaysIPhone2025,
+  title = {Apple Delays {{iPhone AI}} Features as It Stumbles in Race with Rivals},
+  author = {Acton, Michael},
+  year = {2025},
+  month = mar,
+  journal = {Financial Times},
+  urldate = {2025-05-23},
+  abstract = {Capabilities making voice assistant Siri smarter and more integrated will take `longer than we thought', tech company says},
+  chapter = {Apple Inc},
+  file = {C:\Users\ricus\Zotero\storage\ECAHZV3V\d3e7b84e-53cd-4d42-b7bb-21e8f065cff6.html}
+}
+
 @article{adrianImpulsesProducedSensory1926,
   title = {The Impulses Produced by Sensory Nerve Endings: {{Part}} 3. {{Impulses}} Set up by {{Touch}} and {{Pressure}}},
   shorttitle = {The Impulses Produced by Sensory Nerve Endings},
@@ -159,6 +171,14 @@
   langid = {english},
   keywords = {artificial intelligence,deep learning,physiologically plausible models,Signal processing,speech recognition,spiking neurons,Surrogate Gradient Learning},
   file = {C:\Users\ricus\Zotero\storage\VLPBCYKP\Bittar and Garner - 2022 - A surrogate gradient spiking baseline for speech command recognition.pdf}
+}
+
+@article{bradshawMetasInvestmentVR2025,
+  title = {Meta's Investment in {{VR}} and Smart Glasses on Track to Top \$100bn},
+  author = {Bradshaw, Tim and Murphy, Hannah},
+  year = {2025},
+  month = feb,
+  journal = {Financial Times}
 }
 
 @article{caoSpikingDeepConvolutional2015,
@@ -979,6 +999,18 @@
   file = {C:\Users\ricus\Zotero\storage\CVTKQP82\Wang et al. - 2022 - LTMD Learning Improvement of Spiking Neural Networks with Learnable Thresholding Neurons and Modera.pdf}
 }
 
+@article{watersOpenAIsMindbogglingGrowth2025,
+  title = {{{OpenAI}}'s Mind-Boggling Growth Masks Challenges},
+  author = {Waters, Richard},
+  year = {2025},
+  month = apr,
+  journal = {Financial Times},
+  urldate = {2025-05-23},
+  abstract = {As it races towards 1bn users the AI company needs to explain what, exactly, ChatGPT is for},
+  chapter = {Business Insight},
+  file = {C:\Users\ricus\Zotero\storage\S4ITURVN\6df0a725-15bf-4bab-ace5-e3cafdb21542.html}
+}
+
 @article{weilenmannSingleNeuromorphicMemristor2024,
   title = {Single Neuromorphic Memristor Closely Emulates Multiple Synaptic Mechanisms for Energy Efficient Neural Networks},
   author = {Weilenmann, Christoph and Ziogas, Alexandros Nikolaos and Zellweger, Till and Portner, Kevin and Mladenovi{\'c}, Marko and Kaniselvan, Manasa and Moraitis, Timoleon and Luisier, Mathieu and Emboras, Alexandros},
@@ -997,6 +1029,18 @@
   langid = {english},
   keywords = {Electronic devices,Information technology},
   file = {C:\Users\ricus\Zotero\storage\X6THU2EI\Weilenmann et al. - 2024 - Single neuromorphic memristor closely emulates multiple synaptic mechanisms for energy efficient neu.pdf}
+}
+
+@misc{wiggersRabbitBuildingAI2023,
+  title = {Rabbit Is Building an {{AI}} Model That Understands How Software Works},
+  author = {Wiggers, Kyle},
+  year = {2023},
+  month = oct,
+  journal = {TechCrunch},
+  urldate = {2025-05-23},
+  abstract = {Rabbit, a newly funded startup, is building a model to interact with software across desktop and mobile platforms.},
+  langid = {american},
+  file = {C:\Users\ricus\Zotero\storage\88DK7U2F\rabbit-is-building-an-ai-model-that-understands-how-software-works.html}
 }
 
 @misc{wolffCowolffSimpleSpikingNeuralNetworkSTDP2025,
@@ -1109,6 +1153,17 @@
   langid = {english},
   keywords = {attention mechanism,Backpropagation (BP),feedforward lateral inhibition (FLI),neuromorphic recognition,snn-speech,spatio-temporal synaptic connection (STSC),spike response filter (SRF),Spiking neural network (SNN)},
   file = {C:\Users\ricus\Zotero\storage\D4ETVKG7\Yu et al. - 2022 - STSC-SNN Spatio-Temporal Synaptic Connection with temporal convolution and attention for spiking ne.pdf}
+}
+
+@misc{zehraComparativeAnalysisPython2020,
+  title = {Comparative {{Analysis}} of {{C}}++ and {{Python}} in {{Terms}} of {{Memory}} and {{Tim}}},
+  author = {Zehra, Farzeen and Javed, Maha and Khan, Darakhshan and Pasha, Maria},
+  year = {2020},
+  doi = {10.20944/preprints202012.0516.v1},
+  urldate = {2025-05-22},
+  abstract = {In this era of technology, programming has become more significant than ever before. Python and C++ are both widely used programming languages. Python, the most popular programming language in today\&rsquo;s world, is a high-level object-oriented language whereas C++, the language behind most operating systems, is a low-level object-oriented language. In this paper, we present a comparative study of Python and C++. This paper discusses the introduction to these languages, their memory management techniques, and the reasons behind their program execution speed. Furthermore, we analyzed the execution time and memory used by multiple algorithms in both the languages with best, average, and worst cases. They are also compared with respect to the benefits and issues related to them. Results indicate that C++ is faster than Python in execution speed but Python serves as a better language for beginners due to its simplicity. Moreover, for the best results, the language should be selected according to the type of project.},
+  copyright = {cc by},
+  file = {C:\Users\ricus\Zotero\storage\W2LJ89TV\Zehra et al. - 2020 - Comparative Analysis of C++ and Python in Terms of Memory and Tim.pdf}
 }
 
 @article{zhangDigitalLiquidState2015,
